# ONEXUS

./: .baseline_failures.txt  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  VISION-AGENTIC-OS.md  pyproject.toml  railway.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  daily-briefing.yml  deploy-site.yml  nightly-catalog.yml  update-registry.yml  validate-community-module.yml
community/: CONTRIBUTING.md  manifest_schema.json  registry.json
docs/: AUTOMATION.md  CHEATSHEET.md  DEPLOY.md  RELEASE_NOTES_v1.md
docs/agents/: foundation.md  network-gateway.md  safety-ux.md  surfaces.md
docs/launch/: README.md
docs/plans/: 2026-04-26-batch-1-kernel.md  2026-04-26-batch-2-perception.md  2026-04-26-batch-3-action.md  2026-04-26-batch-4-advanced.md  2026-04-26-batch-5-network.md
docs/specs/: design.md
migrate/: README.md  bootstrap-new-mac.sh  bundle.sh
nexus/: cli.py  config.py  context.py
nexus/agents/: __init__.py  _gating.py  _schema_export.py  arbiter.py  axiom.py  base.py  bastion.py  carve.py  catalog.py  compass.py  dispatch.py  flux.py  gauge.py  in_process_agent.py  installer.py  kindle.py  launcher.py  ledger.py  loom.py  mandate.py  manifest.py  mcp_agent.py  mint.py  mnemonic.py  quarry.py  redline.py  registry.py  remedy.py  rune.py  scaffold.py  scribe.py  sentinel.py  tally.py  thesis.py  vex.py  vigil.py
nexus/api/: auth.py  capabilities.py  models.py  server.py
nexus/aurora/: app.css  app.js  icons.js  index.html  md.js  mood.css  scene.css  scene.js  tokens.css
nexus/benchmarks/: models.py  report.py  runner.py
nexus/briefings/: __init__.py  daily.py
nexus/community/: installer.py  marketplace.py  models.py  registry.py  reputation.py  validator.py
nexus/dashboard/: app.js  icons.js  index.html  styles.css
nexus/federation/: discovery.py  models.py  peer.py  protocol.py  security.py  sync.py
nexus/inference/: anthropic_provider.py  kernel_http_client.py  llm.py  local.py  ollama.py  openai_provider.py  provider.py  router.py
nexus/kernel/: aegis.py  chronicle.py  cortex.py  engram.py  pulse.py
nexus/mcp/: prompts.py  resources.py  server.py  tools.py
nexus/messaging/: bridge.py  discord_bridge.py  manager.py  telegram.py
nexus/modules/: __init__.py  adversarial.py  agent_dispatcher.py  arbiter.py  atlas.py  autonomic.py  axiom.py  base.py  bastion.py  carve.py  chronos.py  cipher.py  collective.py  compass.py  consciousness.py  council.py  dispatch.py  dream_loop.py  dreamweaver.py  echo.py  emergence.py  ethical_prism.py  flux.py  forge.py  gauge.py  general.py  herald.py  kindle.py  ledger.py  legacy.py  loom.py  mandate.py  mint.py  mnemonic.py  oracle.py  prism.py  provenance.py  quarry.py  redline.py  remedy.py  (+17 more)
nexus/multimodal/: __init__.py  audio.py  (+5 more)
reports/: 2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16-correction.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01-correction.md  2026-07-01.md  README.md
site/: astro.config.mjs  package-lock.json  package.json
standalone/: Cargo.toml  README.md  tauri.conf.json
standalone/capabilities/: default.json
standalone/icons/: icon.icns
standalone/src/: lib.rs  main.rs
tests/: conftest.py  test_batch2_integration.py  test_batch3_integration.py  test_batch4_integration.py  test_batch5_integration.py  test_batch6_integration.py  test_batch7a_integration.py  test_batch7b_integration.py  test_cli.py  test_config.py  test_context.py  test_integration.py
(+396 files in other folders)
