[project]
name = "nexus-ai"
version = "0.1.0"
description = "Autonomous intelligence operating system"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "sqlite-vec>=0.1.1",
    "llama-cpp-python>=0.2.50",
    "smolagents>=1.0",
    "litellm>=1.30",
    "openai>=1.0",
    "anthropic>=0.30",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "sse-starlette>=1.6",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
