[project]
name = "onexus"
version = "0.2.0"
description = "Open-Source Neural Executive for Unified Superintelligence"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.27",
    "mcp>=0.9",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
    "litellm>=1.30",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "sse-starlette>=1.6",
]
tui = [
    "rich>=13.0",
]
messaging = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
]
all = [
    "onexus[llm,api,tui,messaging]",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.0",
    "respx>=0.21",
]

[project.scripts]
onexus = "nexus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
