[package]
name = "onexus"
version = "1.0.0"
description = "ONEXUS — an operating system for agents (standalone shell)"
authors = ["AllStreets"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "onexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
notify = "8"
notify-debouncer-mini = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
